[metadata]
name = jaxutils
version = 0.1.dev2
url = https://github.com/dimasad/jaxutils
author = Dimas Abreu Archanjo Dutra
author_email = dimas.dutra@mail.wvu.edu
description = Utilities and decorators for working with JAX.
long_description = file: README.md
license = MIT

[options]
packages = jaxutils
package_dir =
    = src
install_requires =
    jax
    numpy
